force-app/main/default/objects/Lead_Scoring_Config__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <description>評価キー</description>
</CustomField>