force-app/main/default/objects/Lead_Scoring_Config__mdt/fields/Score_Type__c.field-meta.xml
<CustomField>
    <fullName>Score_Type__c</fullName>
    <label>Score Type</label>
    <length>50</length>
    <type>Text</type>
    <description>Attribute / Behavior / Interest</description>
</CustomField>