force-app/main/default/objects/Lead_Scoring_Config__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>重み</description>
</CustomField>